# onenote_AiAgent

./: .gitignore  README.md  docker-compose.yml  package-lock.json
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: agent.py  llm.py  main.py  ollama_client.py  schemas.py
backend/app/routers/: agent_routes.py
backend/app/tools/: ocr.py  onenote.py  stt.py
backend/app/utils/: msal_device.py
backend/postman/: OneNoteAI.postman_collection.json  OneNoteAI.postman_environment.json
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: OneNoteChatbot.tsx  index.ts
frontend/src/components/chat/: ChatInput.tsx  ChatMessageItem.tsx  ChatMessageList.tsx  index.ts
frontend/src/components/ui/: Button.tsx  Input.tsx  Textarea.tsx
frontend/src/components/upload/: FileUploader.tsx
frontend/src/hooks/: useChat.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/types/: api.ts  chat.ts  index.ts
